feat: add mobile version

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<h1 class="title">Прокат мотоциклов</h1>
 			</section>
 
-			<section class="section">
+			<section class="advantages section">
 				<ul class="list">
 					<li class="item">Обучение</li>
 					<li class="item">Туры</li>
