feat: add contacts section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
 				</h1>
 			</section>
 
-			<section class="map section">
+			<section class="contacts dark-bg section">
+				<a class="tg-button" href="https://t.me/gorkiprokat163">
+					<img class="icon" src="tg.png" alt="">
+					Телеграм
+				</a>
+			</section>
+
+			<section class="map dark-bg section">
 				<iframe
 					src="https://yandex.ru/map-widget/v1/?um=constructor%3Abc1b7937f04dba6d117466a661fc2a1b904d7ef0968e454cc48094414b9e2c88&amp;source=constructor"
 					width="600" height="400" frameborder="0"></iframe>
